# mkdocs-modern-theme

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  babel.cfg  docs-mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: commitlint.yml  docs.yml  release.yml
docs/: configuration.md  deployment.md  extensions.md  getting-started.md  index.md
docs/content/: admonitions.md  cards.md  code-blocks.md  file-tree.md  mermaid.md  steps.md  tables.md  tabs.md
docs/customization/: colors.md  layout.md  theming.md  typography.md
mkdocs_modern_theme/: 404.html  __init__.py  base.html  mermaid.py  mkdocs_theme.yml
mkdocs_modern_theme/css/: input.css  pymdownx.css  theme.css
mkdocs_modern_theme/js/: alpine.min.js  copy-code.js  theme.js
mkdocs_modern_theme/locales/: messages.pot
mkdocs_modern_theme/locales/de/LC_MESSAGES/: messages.mo  messages.po
mkdocs_modern_theme/locales/es/LC_MESSAGES/: messages.mo  messages.po
mkdocs_modern_theme/locales/fr/LC_MESSAGES/: messages.mo  messages.po
mkdocs_modern_theme/locales/ja/LC_MESSAGES/: messages.mo  messages.po
mkdocs_modern_theme/locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
mkdocs_modern_theme/partials/: announcement.html  breadcrumbs.html  content.html  footer.html  head.html  header.html  mobile-menu.html  scripts.html  search-modal.html  sidebar-nav-item.html  sidebar.html  toc.html
scripts/: capture-theme-screenshots.mjs  update_docs_version.py
tests/: mkdocs.yml
tests/docs/: index.md
tests/docs/customization/: colors.md
tests/docs/getting-started/: configuration.md  development.md  installation.md
tests/docs/guide/: admonitions.md  code-blocks.md  components.md  mermaid.md  pymdownx.md  writing-docs.md
tests/docs/reference/: api.md  changelog.md
tests/e2e/: announcement.spec.ts  debug-screenshot.spec.ts  feedback.spec.ts  mermaid.spec.ts  navigation.spec.ts  playwright.config.ts  pymdownx.spec.ts  responsive.spec.ts  screenshot-pymdownx.spec.ts  search.spec.ts  sidebar-collapse.spec.ts  theme-toggle.spec.ts  toc.spec.ts  visual.spec.ts
