[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-modern-theme"
version = "0.1.0"
description = "A modern, minimal MkDocs theme inspired by Nextra"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Ralph" }]
keywords = ["mkdocs", "theme", "documentation", "nextra", "modern"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs>=1.5",
    "pymdown-extensions>=10.0",
    "pygments>=2.16",
]

[project.entry-points."mkdocs.themes"]
modern = "mkdocs_modern_theme"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_modern_theme"]
