[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-modern-theme"
version = "1.1.0"
description = "A modern, minimal MkDocs theme inspired by Nextra"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Ralph" }]
keywords = ["mkdocs", "theme", "documentation", "nextra", "modern"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs>=1.5",
    "pymdown-extensions>=10.0",
    "pygments>=2.16",
]

[project.entry-points."mkdocs.themes"]
modern = "mkdocs_modern_theme"

[project.optional-dependencies]
last-updated = [
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_modern_theme"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["mkdocs_modern_theme/__init__.py:__version__"]
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
enabled = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
