[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-modern-theme"
version = "1.6.0"
description = "A modern, minimal MkDocs theme inspired by Nextra"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Ralph" }]
keywords = ["mkdocs", "theme", "documentation", "nextra", "modern"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs>=1.5",
    "pymdown-extensions>=10.0",
    "pygments>=2.16",
    "mkdocs-glightbox>=0.5.2",
]

[project.entry-points."mkdocs.themes"]
modern = "mkdocs_modern_theme"

[project.optional-dependencies]
last-updated = [
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
]
i18n = [
    "babel>=2.12",
]

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_modern_theme"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["mkdocs_modern_theme/__init__.py:__version__"]
build_command = "python3 scripts/update_docs_version.py {version}"
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
enabled = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.9"

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
format_css = true
format_js = true
ignore = "H006,H030,H031,T002"
include = "H,T"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "mdformat>=0.7.22",
    "mdformat-mkdocs>=4.4.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
